# Bogatyri

./: README.md
Bogatyri/: docker-compose.yml
Bogatyri/backend/: .gitignore  Dockerfile  ble_device_tracker.py  controller_interaction.py  controller_listener.py  pyproject.toml  requirements.txt
Bogatyri/backend/src/: RSSISubscriber.py  controller_interaction.py  main.py
Bogatyri/backend/src/domain/: freq.py  sensor.py
Bogatyri/backend/src/models/: schemas.py
Bogatyri/backend/src/services/: RSSISubscriber.py  ble_device_tracker.py  controller_listener.py  monitor_state.py  mqtt_publisher.py  state_controller.py  websocket_connection_manager.py
Bogatyri/backend/src/utils/: position_estimator.py
Bogatyri/frontend/public/: global.css  index.html
Bogatyri/frontend/src/: App.svelte  connection.js  stores.js
Bogatyri/frontend/src/components/: ControlPanel.svelte  Map.svelte  StatusBar.svelte
